--- a/my-next-projec/.env
+++ b/my-next-projec/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY= "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"
+SENDGRID_API_KEY= "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"
