--- a/my-next-projec/.env
+++ b/my-next-projec/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY= "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"
+SENDGRID_API_KEY=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
