--- a/my-next-projec/.env
+++ b/my-next-projec/.env
@@ -1,3 +1,3 @@
 Authorization: Bearer <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>
 user_name: "apikey"
-password: <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>
+SENDGRID_API_KEY: <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>
