--- a/my-next-projec/.env
+++ b/my-next-projec/.env
@@ -1,3 +1,3 @@
-Authorization: Bearer <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>
-user_name: "apikey"
-SENDGRID_API_KEY: <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>
+SG_API_KEY=paste-your-sendgrid-api-key-here
+TO_EMAIL=anass123zahir@gmail.com
+FROM_EMAIL=zahir.electro.tech@gmail.com
