--- a/my-next-projec/.env
+++ b/my-next-projec/.env
@@ -1,3 +1,2 @@
-SG_API_KEY="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"
-TO_EMAIL="anass123zahir@gmail.com"
-FROM_EMAIL="zahir.electro.tech@gmail.com"
+SG_API_KEY="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"
+
